app/assets/stylesheets/components/topbar.css.scss
nav.top-bar {

  .title-area {
    @include grid-column($columns: 8);

    .name {
      margin-left: 4px;

      .hacken-logo {
        float: left;
        max-height: 20px;
        margin-top: 11px;
        margin-right: 5px;
      }
    }
  }

  .right {
    background-color: transparent;
  }

  li.search-form {
    background: #000;
  }

  .search-field {
    @include grid-column($columns: 8, $collapse: true);

    input {
      line-height: 18px;
      border: none;
      font-size: 0.575rem;
      -webkit-appearance: none;
      border-radius: 0;
    }
  }

  .search-button {
    @include grid-column($columns: 4, $collapse: true);

    a.button {
      width: 100%;
      line-height: 16px;
      padding-left: 12px;
      padding-right: 12px;
      font-size: 0.575rem;
    }
  }

  @media #{$small-only} {
    .sidebar-toggle a {
      line-height: 45px;
      font-size: 1.0625rem;
      color: $topbar-menu-link-color;
    }
    .search-button {
    }
  }

  @media #{$medium-up} {
    .sidebar-toggle a {
      display: none;
    }
  }
}

